<resources>
    <string name="app_name">BCExplorer</string>

    <!-- Global -->
    <string name="location">Overview</string>
    <string name="TextViewMaps">Maps</string>
    <string name="TextViewGallery">Gallery</string>
    <string name="textViewNoSavedItem">No saved items</string>
    <string name="TextViewDestinations">Destinations</string>
    <string name="textViewCities">City Guides</string>
    <string name="destinationImage">Destination image</string>
    <string name="saveIcon">Save icon</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="sample_title">Title</string>
    <string name="title1">Card 1</string>
    <string name="title2">Card 2</string>
    <string name="title3">Card 3</string>
    <string name="title4">Card 4</string>
    <string name="title5">Card 5</string>
    <string name="sample_text">The quick brown fox jumps over the lazy dog</string>
    <string name="textViewHomeFeatured">Featured Destinations</string>
    <string name="textViewHomeExploreCities">Explore BC Cities</string>
    <string name="textViewHomeCategories">Categories</string>
    <string name="textViewCategory">Category</string>
    <string name="locations">Locations</string>

    <!-- Saved -->
    <string name="saved">Saved</string>

    <!-- Info -->
    <string name="info">Information</string>
    <string name="app_version">BCExplorer v1.0</string>
    <string name="source_code">Source code</string>
    <string name="contact_us">Contact us</string>
    <string name="credits">Credits</string>
    <string name="repo_url">https://github.com/huybui-dc/F21G11_BCExplorer</string>
    <string name="textViewLocationSources">Sources</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">
        Hello
        blank
        fragment
    </string>
    <string name="hello_word">Hello, World!</string>
    <string name="title_activity_read_more">ReadMore</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textViewMaterialsUsed">Marterials Used</string>

</resources>