<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHomeFeatured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/textViewHomeFeatured"
                android:textColor="@color/black"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerHomeFeatured"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeFeatured"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewHomeExploreCities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/textViewHomeExploreCities"
                android:textColor="@color/black"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        style="@style/card_view"
                        android:id="@+id/whiteRockCardView"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            style="@style/image_view"
                            android:src="@drawable/white_rock" />

                        <LinearLayout style="@style/card_text_bg">

                            <TextView
                                style="@style/headertext"
                                android:text="White Rock"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/h4"
                                android:textStyle="bold"/>

                            <TextView
                                style="@style/desctext"
                                android:text="City In British Columbia"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/card_view"
                        android:id="@+id/vancouverCardView"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            style="@style/image_view"
                            android:src="@drawable/vancouver" />

                        <LinearLayout style="@style/card_text_bg">

                            <TextView
                                style="@style/headertext"
                                android:text="Downtown Vancouver"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/h4"
                                android:textStyle="bold"/>

                            <TextView
                                style="@style/desctext"
                                android:text="Center of The City"
                                android:textSize="@dimen/text_body_small"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/card_view"
                        android:id="@+id/whistlerCardView"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            style="@style/image_view"
                            android:src="@drawable/whistler"
                            android:textSize="@dimen/text_body_small"/>

                        <LinearLayout style="@style/card_text_bg">

                            <TextView
                                style="@style/headertext"
                                android:text="Whistler"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/h4"
                                android:textStyle="bold"/>

                            <TextView
                                style="@style/desctext"
                                android:text="Tourist Spot Outside Vancouver"
                                android:textSize="@dimen/text_body_small"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerExploreCities"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="5dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeExploreCities"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewHomeCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/textViewHomeCategories"
                android:textColor="@color/black"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Placeholder TextView -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="Placeholder TextView" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>